wp-content/themes/wp-reddoor/static/styles/src/style.less
@import "header.less";
@import "nav.less";
@import "content.less";
@import "widgets.less";
@import "footer.less";
@import "basic.less";
@import "popup.less";
@import "guide.less";
@import "mobile.less";
@import "property.less";

@import (inline) "bootstrap.min.css";
@import (inline) "bootstrap-theme.min.css";
@import (inline) "jquery-ui.css";
@import (inline) "select2.min.css";
@import (inline) "icons-pack.css";

// Variables
@orange: #FF8100;
@black: #262626;
@white: #fff;
@buttons: #d03528;
@adaptMobile: 992px;

@import "buttons.less";


// All child columns will not have a gutter
.row.no-gutter [class*="col-"] {
  padding-left:0;
  padding-right:0;
}


// Large Screens Only
@media screen and (min-width: @adaptMobile) {
  .home {
    .select2-dropdown {
      width: 400px !important;
    }
  }
}

// Small Screens Only
@media screen and (max-width: @adaptMobile) {
  body {

    #header {
      height: 103px;
    }

    background: none !important;

    .site-logo {
      left: 23px;
      top: 5px;
      width: 60px;
      margin: 0;
      height: 60px;

      img {
        max-width: 100%;
      }

    }

    .toggle {
      position: relative;
      right: -7px;
      top: -12px;

      .icon.mobile-menu-toggle {
        width: 30px;
        height: 30px;
      }

    }

    // match the background color of the rdc logo
    .headerTopMenu {
      background: #F3F0E9 !important;
      height: 100px;
      margin-bottom: 15px;
    }

    .ftrdImgGoTop {
      margin-bottom: 16px;
      top: 0 !important;
      .featuredImageHeader {
        top: -40px !important;
      }
    }
    .head-popups {
      display: none;
    }
    .frontPageSearchBlock {
      /*top: -40px !important;*/
      min-height: 800px;
      & > h1 {
        font-size: 3em;
        font-weight: 600;
      }
      & > h4 {
        margin-bottom: 45px;
        margin-top: 25px;
        line-height: 1.8em;
      }

      .sf-property-quantity {
        display: none;
      }
    }



    &.single-property {

      .singlePropertyHeader {
        z-index: 9;
      }
      .bottomSeparate {
        padding-bottom: 5px;
      }
      .areaMapBlock {
        .ambItem {
          margin: 0 0 30px 0;
        }
      }
      .listingProvider {
        .col-lg-8 {
          ul {
            float: none;
            width: 100%;
            margin-left: 0 !important;
          }
        }
      }
      .oneAgent{
        position: inherit !important;
        width: 100%;
        margin: 20px 0 0 0;
        right: 0 !important;
        top: 0 !important;
      }
    }
    .menuDesktop {
      display: none !important;
    }
    .popUpLoginBtn {
      display: none !important;
    }
    .popUpContactBtn {
      margin-right: 10%;
    }
    .mobileMenu, .toggle, .menuAdaptive {
      display: block !important;
    }
    .searchForm {
      form {
        border-radius: 0 0 5px 5px;
        height: 370px;
        padding: 9px;
        .location {
          width: 100%;
          border-radius: 5px;
          margin-bottom: 10px;
          .select2 {
            min-width: 99%;
          }
        }
        .sfBeds {
          width: 100%;
          border-radius: 5px;
        }
        .sfBaths {
          width: 100%;
          margin-top: 10px;
          border-radius: 5px;
        }
        .sfPrice {
          width: 100%;
          border-radius: 5px;
          margin-top: 10px;
        }
        input[type="submit"] {
          width: 100%;
          margin-left: 0;
          margin-top: 10px;
          padding: 18px 20px;
        }
        ul {
          position: relative;
          z-index: 20;
        }
      }
      .sfPriceRange {
        .sfprInputsBlock {

          input {
            width: 48.7%;
          }
        }
        .left-side {
          width: 50%;
        }
        .right-side {
          width: 50%;
        }
        .firstRangeList {
          padding-right: 15px;
          text-align: center;
        }
        .lastRangeList {
          padding-left: 15px;
          text-align: center;
        }
      }
      &>ul{
        float: none;
        width: 100%;
        &>li{
          width: 49.7%;
          text-align: center;
        }
      }
      .sellRentBtns{
        display: none;
      }
    }

    .oneCategory {
      margin: auto;
    }
    .popup {
      left: 30%;
      top: 15%;
    }
    .tabbedWidgetMobile {
      display: block !important;

      .ui-widget-content {
        padding: 10px 10px 40px;
        color: #6d6e71;
        line-height: 2em;

        h4 {
          font-size: 2em;
          color: #5a595c;
        }
        h5 {
          margin-top: 30px;
          font-size: 1.4em;
          color: #5a595c;
        }
        .sow-icon-reddoorcompany {
          color: @buttons;
          display: block;
          float: none;
          font-size: 4em;
          margin: 35px 0;
        }
      }
    }
    .footerWidgetArea2 {
      text-align: center;
      margin-top: 30px;
    }
    .footerWidgetArea3 {
      margin-top: 30px;
    }
    .so-widget-tabbed-content {
      .sow-slider-image-wrapper {
        .tabbedWidgetImageArea {
          display: none;
        }
        .tabbedWidgetContent {
          width: 100% !important;
        }
      }
      .tabbedMobileImageArea {

      }
    }
    .mobileMenu {
      .closeMobileMenu {
        font-size: 2em !important;
      }
      .menu-header-container {
        & > ul {
          & > li {
            & > a {
              font-size: 1.7em !important;
            }
            & > ul {
              & > li {
                & > a {
                  font-size: 1.2em !important;
                }
              }
            }
          }
        }
      }
      & > a {
        font-size: 1.5em;
        &:focus {
          text-decoration: none;
          color: #fff;
        }
      }
      .mobileContactUs {
        display: block;
      }
    }
    .hero-content .so-widget-sow-editor {
      margin: 0 auto;
      padding: 2% 0;
      width: 90%;
    }

  }

  .home {
    .select2-dropdown {
      margin-top: -1px;
    }
  }

  .so-widget-tabbed-content {
    .sow-slider-base {
      display: none !important;
      .sow-slider-pagination {
        display: none;
      }
      .sow-slider-images {
        .sow-slider-image-container {
          display: none;
        }
      }
    }
  }

  .widget_nav_menu {
    ul.menu {
      overflow: hidden;
      border-bottom: 1px solid #fff;
      .menu-item {
        display: list-item;
        border-bottom: 1px solid #fff;
        position: relative;
        text-align: left;
        border-right: 0;
        & + .menu-item {
          display: none;
        }
        .menu-spoiler {
          background: url('../images/src/icon-arrow.png');
          background-position: center center;
          background-repeat: no-repeat;
          background-size: 60% auto;
          height: 24px;
          position: absolute;
          right: 3%;
          top: 30%;
          width: 40px;
          cursor: pointer;
          transition: 0.5s;
          transform: rotate(180deg);
          color: #5a595c;
          &.arrow-down {
            transform: rotate(0);
          }
        }
      }
    }
  }

  .archiveFilterBg {
    height: auto;
    padding: 0;
    .archiveFilterBody {
      ul {
        border-bottom: 1px solid #fff;
        li {
          display: list-item;
          border-bottom: 1px solid #fff;
          position: relative;
          text-align: left;
          border-right: 0;
          & + li {
            display: none;
          }
        }
      }
    }
  }

  .popup {
    .popup-overlay {
      background: #fff none repeat scroll 0 0;
      opacity: 1;
    }
    .exitPopup {
      svg {
        color: #000;
      }
    }
  }

  .archiveImageHeader {
    top: -24px;
  }

  .hideTabMobile {
    display: none;
  }
  .footerWidgetArea1{
    margin-top: 18px;
  }
}

